# db-collector

./: .gitignore  README.md  config.py  pyproject.toml  settings.toml
cmd/: main.py
collector/: __init__.py  colletor.py
collector/mysql/: __init__.py  _queries.py  collector.py
collector/postgresql/: __init__.py  _queries.py  collector.py
domain/: __init__.py
domain/entities/: __init__.py  plan.py  schema.py  statement.py  statement_stats.py
repository/: __init__.py  in_memory.py  repository.py
repository/in_memory/: __init__.py  repository.py
repository/sqlite/: __init__.py  _queries.py  _schema.py  repository.py
types/: __init__.py  dsn.py
